Fixed overlapping of control frame with score box

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -97,7 +97,7 @@ div.player_frame {
 	position: absolute;
 	width: 170px;
 	height: 60px;
-	top: 470px;
+	top: 500px;
 	margin-left: 10px;
 	margin-top: 10px;
 	padding: 5px;
